Refactor UI and text copies for the app

--- a/src/app/legal/privacy/page.mdx
+++ b/src/app/legal/privacy/page.mdx
@@ -5,7 +5,7 @@
 <div className="bg-linear-to-r from-indigo-50 to-purple-50 border-l-4 border-indigo-500 p-6 rounded-r-lg">
   <p className="text-sm font-medium text-indigo-900">Effective Date: December 1, 2025</p>
   <p className="mt-2 text-gray-700">
-    **H2A Digital** ("we," "us," or "our") operates the Easly mobile application (the "App").
+    **Wingman AI** ("we," "us," or "our") operates the Wingman AI mobile application (the "App").
     This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our App.
   </p>
 </div>
@@ -22,7 +22,7 @@
       </li>
       <li className="flex items-start gap-2">
         <span className="text-indigo-500 mt-1">✓</span>
-        <span><strong>Shopping Lists:</strong> Your lists, items, and preferences</span>
+        <span><strong>Chats & Screenshots:</strong> Your uploaded messages, screenshots, and profile text</span>
       </li>
       <li className="flex items-start gap-2">
         <span className="text-indigo-500 mt-1">✓</span>
@@ -174,7 +174,7 @@
       <span className="text-gray-400">Email:</span> <strong>support@h2adigital.com</strong>
     </p>
     <p className="text-lg">
-      <span className="text-gray-400">Company:</span> <strong>H2A Digital</strong>
+      <span className="text-gray-400">Company:</span> <strong>Wingman AI</strong>
     </p>
   </div>
 </div>
