--- a/src/app/legal/terms/page.mdx
+++ b/src/app/legal/terms/page.mdx
@@ -5,7 +5,7 @@
 <div className="bg-linear-to-r from-indigo-50 to-purple-50 border-l-4 border-indigo-500 p-6 rounded-r-lg">
   <p className="text-sm font-medium text-indigo-900">Effective Date: December 1, 2025</p>
   <p className="mt-2 text-gray-700">
-    These Terms of Service ("Terms") govern your use of the Easly mobile application (the "App") operated by **H2A Digital** ("we," "us," or "our").
+    These Terms of Service ("Terms") govern your use of the Wingman AI mobile application (the "App") operated by **Wingman AI** ("we," "us," or "our").
   </p>
 </div>
 
@@ -86,7 +86,7 @@
     <div className="text-center">
       <div className="text-4xl mb-2">📦</div>
       <h4 className="font-bold text-gray-900 mb-1">Your Content</h4>
-      <p className="text-sm text-gray-600">You retain ownership of your shopping lists and data</p>
+      <p className="text-sm text-gray-600">You retain ownership of your chats, screenshots, and profile text</p>
     </div>
     <div className="text-center">
       <div className="text-4xl mb-2">🤝</div>
@@ -107,7 +107,7 @@
   <div className="flex items-start gap-4">
     <span className="text-4xl">©️</span>
     <p className="text-gray-700">
-      The App and its original content, features, and functionality are owned by H2A Digital and are protected by international copyright, trademark, and other intellectual property laws.
+      The App and its original content, features, and functionality are owned by Wingman AI and are protected by international copyright, trademark, and other intellectual property laws.
     </p>
   </div>
 </div>
@@ -151,7 +151,7 @@
 <div className="bg-red-50 border-l-4 border-red-400 p-6 rounded-r-lg">
   <p className="text-gray-700 font-medium mb-2">Liability Limitations</p>
   <p className="text-gray-600 text-sm">
-    TO THE MAXIMUM EXTENT PERMITTED BY LAW, H2A DIGITAL SHALL NOT BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES, OR ANY LOSS OF PROFITS OR REVENUES, WHETHER INCURRED DIRECTLY OR INDIRECTLY.
+    TO THE MAXIMUM EXTENT PERMITTED BY LAW, WINGMAN AI SHALL NOT BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES, OR ANY LOSS OF PROFITS OR REVENUES, WHETHER INCURRED DIRECTLY OR INDIRECTLY.
   </p>
 </div>
 
@@ -183,7 +183,7 @@
   <div className="flex items-start gap-4">
     <span className="text-4xl">🏛️</span>
     <p className="text-gray-700">
-      These Terms shall be governed by and construed in accordance with the laws of the jurisdiction in which H2A Digital operates, without regard to its conflict of law provisions.
+      These Terms shall be governed by and construed in accordance with the laws of the jurisdiction in which Wingman AI operates, without regard to its conflict of law provisions.
     </p>
   </div>
 </div>
@@ -198,10 +198,10 @@
       <span className="text-gray-400">Email:</span> <strong>support@h2adigital.com</strong>
     </p>
     <p className="text-lg">
-      <span className="text-gray-400">Website:</span> <strong>https://h2adigital.com</strong>
+      <span className="text-gray-400">Website:</span> <strong>https://wingman.ai</strong>
     </p>
     <p className="text-lg">
-      <span className="text-gray-400">Company:</span> <strong>H2A Digital</strong>
+      <span className="text-gray-400">Company:</span> <strong>Wingman AI</strong>
     </p>
   </div>
 </div>
