Refactored code to reflect new app name

--- a/src/app/legal/terms/page.mdx
+++ b/src/app/legal/terms/page.mdx
@@ -3,18 +3,15 @@
 # Terms of Service
 
 <div className="bg-linear-to-r from-indigo-50 to-purple-50 border-l-4 border-indigo-500 p-6 rounded-r-lg">
-  <p className="text-sm font-medium text-indigo-900">Effective Date: December 1, 2025</p>
-  <p className="mt-2 text-gray-700">
-    These Terms of Service ("Terms") govern your use of the Wingman AI mobile application (the "App") operated by **Wingman AI** ("we," "us," or "our").
-  </p>
+  <div className="text-sm font-medium text-indigo-900">Effective Date: December 1, 2025</div>
 </div>
 
 ## ✅ Acceptance of Terms
 
 <div className="bg-blue-50 border-2 border-blue-200 rounded-xl p-6">
-  <p className="text-gray-700">
+  <div className="text-gray-700">
     By accessing or using the App, you agree to be bound by these Terms. If you do not agree to these Terms, do not use the App.
-  </p>
+  </div>
 </div>
 
 ## 📱 Use of the App
@@ -25,9 +22,9 @@
       <span className="text-2xl">📜</span>
       License
     </h3>
-    <p className="text-gray-600">
+    <div className="text-gray-600">
       We grant you a limited, non-exclusive, non-transferable, revocable license to use the App for your personal, non-commercial use.
-    </p>
+    </div>
   </div>
 
   <div className="bg-white border border-gray-200 rounded-xl p-6 hover:shadow-md transition-shadow">
@@ -86,17 +83,17 @@
     <div className="text-center">
       <div className="text-4xl mb-2">📦</div>
       <h4 className="font-bold text-gray-900 mb-1">Your Content</h4>
-      <p className="text-sm text-gray-600">You retain ownership of your chats, screenshots, and profile text</p>
+      <div className="text-sm text-gray-600">You retain ownership of your chats, screenshots, and profile text</div>
     </div>
     <div className="text-center">
       <div className="text-4xl mb-2">🤝</div>
       <h4 className="font-bold text-gray-900 mb-1">License to Us</h4>
-      <p className="text-sm text-gray-600">You grant us a license to provide and improve our services</p>
+      <div className="text-sm text-gray-600">You grant us a license to provide and improve our services</div>
     </div>
     <div className="text-center">
       <div className="text-4xl mb-2">⚖️</div>
       <h4 className="font-bold text-gray-900 mb-1">Your Responsibility</h4>
-      <p className="text-sm text-gray-600">You're responsible for accuracy and legality of your content</p>
+      <div className="text-sm text-gray-600">You're responsible for accuracy and legality of your content</div>
     </div>
   </div>
 </div>
@@ -106,9 +103,9 @@
 <div className="bg-linear-to-r from-cyan-50 to-blue-50 rounded-xl p-6">
   <div className="flex items-start gap-4">
     <span className="text-4xl">©️</span>
-    <p className="text-gray-700">
-      The App and its original content, features, and functionality are owned by Wingman AI and are protected by international copyright, trademark, and other intellectual property laws.
-    </p>
+    <div className="text-gray-700">
+      The App and its original content, features, and functionality are owned by H2A Digital and are protected by international copyright, trademark, and other intellectual property laws.
+    </div>
   </div>
 </div>
 
@@ -118,41 +115,41 @@
   <div className="bg-white border border-green-200 rounded-lg p-5 hover:border-green-500 transition-colors">
     <div className="text-3xl mb-2">✓</div>
     <h4 className="font-bold text-gray-900 mb-2">Free Core Features</h4>
-    <p className="text-sm text-gray-600">Core features of the App are free to use</p>
+    <div className="text-sm text-gray-600">Core features of the App are free to use</div>
   </div>
   <div className="bg-white border border-blue-200 rounded-lg p-5 hover:border-blue-500 transition-colors">
     <div className="text-3xl mb-2">⭐</div>
     <h4 className="font-bold text-gray-900 mb-2">Premium Features</h4>
-    <p className="text-sm text-gray-600">We may offer premium features or subscriptions in the future</p>
+    <div className="text-sm text-gray-600">We may offer premium features or subscriptions in the future</div>
   </div>
   <div className="bg-white border border-purple-200 rounded-lg p-5 hover:border-purple-500 transition-colors">
     <div className="text-3xl mb-2">💵</div>
     <h4 className="font-bold text-gray-900 mb-2">Clear Pricing</h4>
-    <p className="text-sm text-gray-600">Any fees will be clearly disclosed before purchase</p>
+    <div className="text-sm text-gray-600">Any fees will be clearly disclosed before purchase</div>
   </div>
   <div className="bg-white border border-orange-200 rounded-lg p-5 hover:border-orange-500 transition-colors">
     <div className="text-3xl mb-2">🔄</div>
     <h4 className="font-bold text-gray-900 mb-2">Refund Policy</h4>
-    <p className="text-sm text-gray-600">Subscription fees are non-refundable except as required by law</p>
+    <div className="text-sm text-gray-600">Subscription fees are non-refundable except as required by law</div>
   </div>
 </div>
 
 ## ⚠️ Disclaimers
 
 <div className="bg-yellow-50 border-l-4 border-yellow-400 p-6 rounded-r-lg">
-  <p className="text-gray-700 font-medium mb-2">Important Legal Notice</p>
-  <p className="text-gray-600 text-sm">
+  <div className="text-gray-700 font-medium mb-2">Important Legal Notice</div>
+  <div className="text-gray-600 text-sm">
     THE APP IS PROVIDED "AS IS" AND "AS AVAILABLE" WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AND NON-INFRINGEMENT.
-  </p>
+  </div>
 </div>
 
 ## 🛡️ Limitation of Liability
 
 <div className="bg-red-50 border-l-4 border-red-400 p-6 rounded-r-lg">
-  <p className="text-gray-700 font-medium mb-2">Liability Limitations</p>
-  <p className="text-gray-600 text-sm">
-    TO THE MAXIMUM EXTENT PERMITTED BY LAW, WINGMAN AI SHALL NOT BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES, OR ANY LOSS OF PROFITS OR REVENUES, WHETHER INCURRED DIRECTLY OR INDIRECTLY.
-  </p>
+  <div className="text-gray-700 font-medium mb-2">Liability Limitations</div>
+  <div className="text-gray-600 text-sm">
+    TO THE MAXIMUM EXTENT PERMITTED BY LAW, H2A DIGITAL SHALL NOT BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES, OR ANY LOSS OF PROFITS OR REVENUES, WHETHER INCURRED DIRECTLY OR INDIRECTLY.
+  </div>
 </div>
 
 ## 🚫 Termination
@@ -160,9 +157,9 @@
 <div className="bg-gray-100 rounded-xl p-6">
   <div className="flex items-start gap-4">
     <span className="text-4xl">🔚</span>
-    <p className="text-gray-700">
+    <div className="text-gray-700">
       We may terminate or suspend your account and access to the App immediately, without prior notice or liability, for any reason, including if you breach these Terms.
-    </p>
+    </div>
   </div>
 </div>
 
@@ -171,9 +168,9 @@
 <div className="bg-linear-to-r from-indigo-50 to-blue-50 rounded-xl p-6">
   <div className="flex items-start gap-4">
     <span className="text-4xl">📋</span>
-    <p className="text-gray-700">
+    <div className="text-gray-700">
       We reserve the right to modify these Terms at any time. We will notify you of any changes by posting the new Terms on this page and updating the "Effective Date."
-    </p>
+    </div>
   </div>
 </div>
 
@@ -182,9 +179,9 @@
 <div className="bg-white border-2 border-gray-300 rounded-xl p-6">
   <div className="flex items-start gap-4">
     <span className="text-4xl">🏛️</span>
-    <p className="text-gray-700">
-      These Terms shall be governed by and construed in accordance with the laws of the jurisdiction in which Wingman AI operates, without regard to its conflict of law provisions.
-    </p>
+    <div className="text-gray-700">
+      These Terms shall be governed by and construed in accordance with the laws of the jurisdiction in which H2A Digital operates, without regard to its conflict of law provisions.
+    </div>
   </div>
 </div>
 
@@ -192,17 +189,17 @@
 
 <div className="bg-linear-to-r from-gray-900 to-gray-800 text-white rounded-xl p-8 text-center">
   <h3 className="text-2xl font-bold mb-4">Questions About These Terms?</h3>
-  <p className="mb-6">We're here to help</p>
+  <div className="mb-6">We're here to help</div>
   <div className="space-y-2">
-    <p className="text-lg">
+    <div className="text-lg">
       <span className="text-gray-400">Email:</span> <strong>support@h2adigital.com</strong>
-    </p>
-    <p className="text-lg">
-      <span className="text-gray-400">Website:</span> <strong>https://wingman.ai</strong>
-    </p>
-    <p className="text-lg">
-      <span className="text-gray-400">Company:</span> <strong>Wingman AI</strong>
-    </p>
+    </div>
+    <div className="text-lg">
+      <span className="text-gray-400">Website:</span> <strong>https://h2adigital.com</strong>
+    </div>
+    <div className="text-lg">
+      <span className="text-gray-400">Company:</span> <strong>H2A Digital</strong>
+    </div>
   </div>
 </div>
 
