--- a/src/app/legal/privacy/page.mdx
+++ b/src/app/legal/privacy/page.mdx
@@ -3,11 +3,11 @@
 # Privacy Policy
 
 <div className="bg-linear-to-r from-indigo-50 to-purple-50 border-l-4 border-indigo-500 p-6 rounded-r-lg">
-  <p className="text-sm font-medium text-indigo-900">Effective Date: December 1, 2025</p>
-  <p className="mt-2 text-gray-700">
-    **Wingman AI** ("we," "us," or "our") operates the Wingman AI mobile application (the "App").
+  <div className="text-sm font-medium text-indigo-900">Effective Date: December 1, 2025</div>
+  <div className="mt-2 text-gray-700">
+    **H2A Digital** ("we," "us," or "our") operates the ChatWing mobile application (the "App").
     This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our App.
-  </p>
+  </div>
 </div>
 
 ## 📊 Information We Collect
@@ -49,7 +49,7 @@
 ## 🎯 How We Use Your Information
 
 <div className="bg-linear-to-r from-blue-50 to-cyan-50 rounded-xl p-6">
-  <p className="text-gray-700 mb-4">We use the information we collect to:</p>
+  <div className="text-gray-700 mb-4">We use the information we collect to:</div>
   <ul className="grid md:grid-cols-2 gap-3 text-gray-700">
     <li className="flex items-center gap-2">
       <span className="w-2 h-2 bg-blue-500 rounded-full"></span>
@@ -96,8 +96,8 @@
 ## 🤝 Sharing Your Information
 
 <div className="bg-linear-to-r from-purple-50 to-pink-50 rounded-xl p-6">
-  <p className="text-lg font-semibold text-purple-900 mb-4">We do not sell your personal information.</p>
-  <p className="text-gray-700 mb-3">We may share your information with:</p>
+  <div className="text-lg font-semibold text-purple-900 mb-4">We do not sell your personal information.</div>
+  <div className="text-gray-700 mb-3">We may share your information with:</div>
   <ul className="space-y-2 text-gray-700">
     <li className="flex items-start gap-2">
       <span className="text-purple-500 font-bold">→</span>
@@ -116,66 +116,66 @@
   <div className="bg-white border border-gray-200 rounded-lg p-4 text-center hover:border-indigo-500 transition-colors">
     <div className="text-3xl mb-2">👁️</div>
     <h4 className="font-bold text-gray-900 mb-1">Access</h4>
-    <p className="text-sm text-gray-600">View your personal information</p>
+    <div className="text-sm text-gray-600">View your personal information</div>
   </div>
   <div className="bg-white border border-gray-200 rounded-lg p-4 text-center hover:border-indigo-500 transition-colors">
     <div className="text-3xl mb-2">✏️</div>
     <h4 className="font-bold text-gray-900 mb-1">Correct</h4>
-    <p className="text-sm text-gray-600">Update inaccurate data</p>
+    <div className="text-sm text-gray-600">Update inaccurate data</div>
   </div>
   <div className="bg-white border border-gray-200 rounded-lg p-4 text-center hover:border-indigo-500 transition-colors">
     <div className="text-3xl mb-2">🗑️</div>
     <h4 className="font-bold text-gray-900 mb-1">Delete</h4>
-    <p className="text-sm text-gray-600">Remove your account and data</p>
+    <div className="text-sm text-gray-600">Remove your account and data</div>
   </div>
   <div className="bg-white border border-gray-200 rounded-lg p-4 text-center hover:border-indigo-500 transition-colors">
     <div className="text-3xl mb-2">📧</div>
     <h4 className="font-bold text-gray-900 mb-1">Opt-out</h4>
-    <p className="text-sm text-gray-600">Unsubscribe from marketing</p>
+    <div className="text-sm text-gray-600">Unsubscribe from marketing</div>
   </div>
   <div className="bg-white border border-gray-200 rounded-lg p-4 text-center hover:border-indigo-500 transition-colors">
     <div className="text-3xl mb-2">📦</div>
     <h4 className="font-bold text-gray-900 mb-1">Export</h4>
-    <p className="text-sm text-gray-600">Download your data</p>
+    <div className="text-sm text-gray-600">Download your data</div>
   </div>
 </div>
 
 ## 📬 Email Communications
 
 <div className="bg-yellow-50 border-l-4 border-yellow-400 p-5 rounded-r-lg">
-  <p className="text-gray-700">
+  <div className="text-gray-700">
     You can unsubscribe from marketing emails at any time by clicking the unsubscribe link in the email or contacting us at **support@h2adigital.com**.
-  </p>
+  </div>
 </div>
 
 ## 👶 Children's Privacy
 
 <div className="bg-red-50 border-l-4 border-red-400 p-5 rounded-r-lg">
-  <p className="text-gray-700">
+  <div className="text-gray-700">
     Our App is not intended for children under 13. We do not knowingly collect personal information from children under 13.
-  </p>
+  </div>
 </div>
 
 ## 🔄 Changes to This Privacy Policy
 
 <div className="bg-gray-50 rounded-xl p-6">
-  <p className="text-gray-700">
+  <div className="text-gray-700">
     We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page and updating the "Effective Date."
-  </p>
+  </div>
 </div>
 
 ## 📞 Contact Us
 
 <div className="bg-linear-to-r from-gray-900 to-gray-800 text-white rounded-xl p-8 text-center">
   <h3 className="text-2xl font-bold mb-4">Questions About This Privacy Policy?</h3>
-  <p className="mb-6">We're here to help</p>
+  <div className="mb-6">We're here to help</div>
   <div className="space-y-2">
-    <p className="text-lg">
+    <div className="text-lg">
       <span className="text-gray-400">Email:</span> <strong>support@h2adigital.com</strong>
-    </p>
-    <p className="text-lg">
-      <span className="text-gray-400">Company:</span> <strong>Wingman AI</strong>
-    </p>
+    </div>
+    <div className="text-lg">
+      <span className="text-gray-400">Company:</span> <strong>H2A Digital</strong>
+    </div>
   </div>
 </div>
 
