Updated faq and legal terms

--- a/src/app/legal/terms/page.mdx
+++ b/src/app/legal/terms/page.mdx
@@ -114,13 +114,13 @@
 <div className="grid md:grid-cols-2 gap-4 not-prose">
   <div className="bg-white border border-green-200 rounded-lg p-5 hover:border-green-500 transition-colors">
     <div className="text-3xl mb-2">✓</div>
-    <h4 className="font-bold text-gray-900 mb-2">Free Core Features</h4>
-    <div className="text-sm text-gray-600">Core features of the App are free to use</div>
+    <h4 className="font-bold text-gray-900 mb-2">Paid Access</h4>
+    <div className="text-sm text-gray-600">Use of the App requires an active paid plan unless otherwise stated</div>
   </div>
   <div className="bg-white border border-blue-200 rounded-lg p-5 hover:border-blue-500 transition-colors">
     <div className="text-3xl mb-2">⭐</div>
-    <h4 className="font-bold text-gray-900 mb-2">Premium Features</h4>
-    <div className="text-sm text-gray-600">We may offer premium features or subscriptions in the future</div>
+    <h4 className="font-bold text-gray-900 mb-2">Plans and Features</h4>
+    <div className="text-sm text-gray-600">Features vary by plan and are described at the time of purchase</div>
   </div>
   <div className="bg-white border border-purple-200 rounded-lg p-5 hover:border-purple-500 transition-colors">
     <div className="text-3xl mb-2">💵</div>
